--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A simple library to manage logs using winston",
   "main": "index.js",
   "scripts": {
-    "jsdoc": "./node_modules/.bin/jsdoc -c jsdoc.json"
+    "jsdoc": "./node_modules/.bin/jsdoc -c jsdoc.json",
+    "test": "node test.js"
   },
   "keywords": [
     "log"
